First working version.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,11 @@
 cmake_minimum_required(VERSION 2.8.9)
 project(make-it-roll)
 
-// FILL IN THE CMAKE CODE
+#message("YARP_LIBRARIES ${YARP_LIBRARIES}")
+find_package(YARP REQUIRED)
+# add YARP include directories
+include_directories(${YARP_INCLUDE_DIRS})
+
+add_executable(main main.cpp)
+
+target_link_libraries(main ${YARP_LIBRARIES})
