Added ICUB in CMAKE.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,11 @@ project(make-it-roll)
 
 #message("YARP_LIBRARIES ${YARP_LIBRARIES}")
 find_package(YARP REQUIRED)
+find_package(ICUB REQUIRED)
 # add YARP include directories
-include_directories(${YARP_INCLUDE_DIRS})
+include_directories(${YARP_INCLUDE_DIRS}
+                    ${ICUB_INCLUDE_DIRS})
+
 
 add_executable(main main.cpp)
 
