--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,4 +11,4 @@ include_directories(${YARP_INCLUDE_DIRS}
 
 add_executable(main main.cpp)
 
-target_link_libraries(main ${YARP_LIBRARIES})
+target_link_libraries(main ${YARP_LIBRARIES} ctrlLib)
